--- a/style.css
+++ b/style.css
@@ -1,46 +1,448 @@
-.main-div {
+@import url('https://fonts.googleapis.com/css2?family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+ }
+
+
+ header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* border-bottom: 1px solid black; */
+
+  
+ }
+
+
+ nav {
+    background-color: #ffffff;
+    color: #fff;
+    padding: 10px 20px;
     display: flex;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    font-size: 18px;
+  }
 
-
-.div-mom {
+  .logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: black;
     display: flex;
-    justify-content: start;
-}
+    gap: 10px;
+    font-family: "Tomorrow", sans-serif;
+
+    margin-left: 25px;
+
+  }
+  .logo-text2 {
+    color: red;
+  }
 
 
-.div-child {
+  .links {
+    display: flex;
+    gap: 25px;
+  }
+
+  .links a {
+    color: black;
+    text-decoration: none;
+    padding: 0 10px;
+    font-family: "Tomorrow", sans-serif;
+
+    font-weight: 500;
+    font-size: 17px;
+    transition-duration: 0.5s;
+    padding: 15px;
+
+  }
+
+  .links a:hover {
+    color: red;
+    transition: 0.2s ease-in-out;
+  }
+
+
+  .icons {
+    display: flex;
+    align-items: center;
+    margin-right: 40px;
+    transition-duration: 0.5s;
+    gap: 20px;
+  }
+
+  .icon-hover {
+    padding: 10px;
+  }
+
+  .icon-hover:hover {
+    color: red;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+    
+  }
+
+
+  .big-main-div{
+    background-color: #f0f0f2;
+    height: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+  }
+
+  .main-div {
+    height: 700px;
+    width: 1200px; 
+    /* border: 1px solid red;  ____________________________________________________________ */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .all-content {
     display: flex;
     flex-direction: column;
-    width: 200px;
-    border-radius: 8px;
-    gap: 5px;
-    margin: 10px;
-}
+    padding: 50px;
+    gap: 35px;
+    font-family: "Tomorrow", sans-serif;
 
-.div-Dad {
-    margin: 10px;   
-    display: flex;
-    
-}
+  }
 
-section {
-    display: flex;
-    justify-content: space-around;
-    gap: 15px;
-    margin-top: 10px;
-    flex-wrap: wrap;
-    margin: 40px;
-}
+  .head-text-1 {
+    font-size: 40px;
+    color: #0b1c39;
+  }
+
+  .p-text-1 {
+  font-family: "Tomorrow", sans-serif;
+  color: #0b1c39;
 
 
-.head-1 {
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
+  }
+
+  .img-class-1 {
+    width: 247px;
+  }
+
+  .button-1 {
+  padding: 13px;
+  width: 130px;
+  margin-top: 10px;
+  font-size: 15px;
+  font-family: "Tomorrow", sans-serif;
+  font-weight: 500;
+  color: white;
+  background-color: #4a4a4b;
+  border: none;
+  transition-duration: 0.5s;
+  
+  
 }
 
-.nav-style-1 {
-    background-color: rgba(0, 0, 0, 0.781);
+
+.button-1:hover{
+  transition: 0.3s ease-in-out;
+  background-color: red;
+  cursor: pointer;
+  
 }
+
+.big-main-div2 {
+  height: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: white;
+}
+
+
+.main-div2{
+  height: 800px;
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content-all-2 {
+  padding: 50px; 
+}
+
+.head-text-2 {
+  font-family: "Tomorrow", sans-serif;
+  height: 80px;
+  font-size: 18px;
+}
+
+.images-div2 {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.cover-watch2 {
+  width: 300px;
+  transition: all 0.6s !important;
+
+
+}
+
+.div-conta {
+  width: 300px;
+  overflow: hidden;
+}
+
+.div-conta:hover img{
+   transform: scale(1.1);
+}
+
+
+
+.size-change-cover-watch {
+  height: 406px;
+}
+
+.conta-img-main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+.cover-img-text-1 {
+  color: #363636;
+  font-family: "Tomorrow", sans-serif;
+  font-size: 19px;
+  margin-top: 8px;
+  cursor: pointer;
+
+}
+
+.cover-watch-price-1 {
+  font-size: 15px;
+  font-family: "Tomorrow", sans-serif;
+  color: red;
+  font-weight: 500;
+  margin-top: 10px;
+  
+}
+
+
+
+.big-main-div3 {
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+.main-div3{
+  height: 700px;
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.div-main-images-3 {
+  display: flex;
+ flex-direction: row;  
+}
+
+.part-1-div{
+  display: flex;
+  flex-direction: row;
+
+}
+
+
+.images-box3-1 {
+  padding: 10px;
+  transition: all 0.6s;
+}
+
+.images-box3-2 {
+  padding: 10px;
+  transition: all 0.6s;
+
+
+}
+
+.images-box3-3 {
+  padding: 10px;
+  transition: all 0.6s;
+
+}
+
+.images-box3-4 {
+  padding: 10px;
+  transition: all 0.6s;
+
+}
+
+
+
+
+
+
+
+.big-main-div4 {
+  height: 900px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid red;
+}
+
+
+
+.main-div4{
+  height: 1000px;
+  width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid red;
+}
+
+
+.div-main-popular-4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 15px;
+  
+}
+
+
+
+.pop-text-4 {
+  font-size: 35px;
+  font-family: "Tomorrow", sans-serif;
+
+
+}
+
+
+.pop-p-4 {
+  text-align: center;
+  /* font-family: "Tomorrow", sans-serif; */
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 15px;
+  color: #757d8a;
+
+
+}
+
+.div-for-pop-img4 {
+ display: flex;
+ gap: 20px;
+ margin-top: 50px;
+}
+
+.pop-img-4-1 {
+  border-bottom: 2px solid red;
+}
+
+.pop-img-4-2 {
+  border-bottom: 2px solid red;
+}
+
+.pop-img-4-3 {
+  border-bottom: 2px solid red;
+}
+
+
+.pop-btn-4 {
+  padding: 18px;
+  width: 210px;
+  margin-top: 10px;
+  font-size: 15px;
+  font-family: "Tomorrow", sans-serif;
+  font-weight: 500;
+  color: white;
+  background-color: red;
+  border: none;
+  transition-duration: 0.5s;
+  margin-top: 55px;
+}
+
+
+.pop-btn-4:hover {
+  transition: 0.5s ease-in-out;
+  background-color: #4a4a4b;
+  cursor: pointer;
+}
+
+
+.div-for-img-text4 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;  
+  cursor: pointer;
+  position: relative;
+}
+
+.ontop-text-1 {
+  position: absolute;
+  top: 71%;
+  background-color: rgba(255, 0, 0, 0.842);
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: whitesmoke;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+.ontop-text-1:hover {
+  position: absolute;
+  top: 71%;
+  background-color: rgba(255, 0, 0, 0.842);
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: whitesmoke;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  opacity: 1;
+  transition: all 0.5s;
+}
+
+
+
+.pop-text-in-img-div {
+  color: #363636;
+  font-family: "Tomorrow", sans-serif;
+  font-size: 19px;
+  margin-top: 8px;
+  cursor: pointer;
+}
+
+
+
+.pop-price-in-img-div {
+  font-size: 15px;
+  font-family: "Tomorrow", sans-serif;
+  color: #363636;
+  font-weight: 500;
+  margin-top: 10px;
+}
+
